# bet_soft

./: .gitignore  README.md  docker-compose.yml
bet-maker/: Dockerfile  main.py  pyproject.toml
bet-maker/app/: routers.py
line-provider/: main.py  pyproject.toml
line-provider/app/: constant.py  models.py  utils.py
line-provider/app/routers/: __init__.py  bet.py  event_router.py
